Update HashIOMap.reflow, remove linear copy